Move javascript to own file

--- a/index.html
+++ b/index.html
@@ -5,17 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Learn Java Script</title>
-
-    <script>
-      console.log("Hello World in head!");
-    </script>
+    <script src="./index.js"></script>
   </head>
   <body>
     <h1>Learn Java Script</h1>
     <p>Hello World!</p>
-
-    <script>
-      console.log("Hello World in body!");
-    </script>
   </body>
 </html>
