--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
   </head>
   <body>
     <h1>Learn Java Script</h1>
-    <p>Hello World!</p>
+    <p>Hi everyone ! We're going to learn Java Script from basic !</p>
+    <ol>
+      <li>
+        <a href="manipulation-number/index.html">Manipulation : Number</a>
+      </li>
+      <li>
+        <a href="manipulation-number/index.html">Manipulation : String</a>
+      </li>
+      <li><a href="manipulation-number/index.html">Comparison : Number</a></li>
+      <li><a href="manipulation-number/index.html">Calculator : Math</a></li>
+      <li><a href="manipulation-number/index.html">Calculator : Shape</a></li>
+      <li><a href="manipulation-number/index.html">Calculator : Time</a></li>
+      <li><a href="manipulation-number/index.html">Address Book</a></li>
+      <li><a href="manipulation-number/index.html">To Do List</a></li>
+    </ol>
   </body>
 </html>
