--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <li>
         <a href="manipulation-string/index.html">Manipulation : String</a>
       </li>
-      <li><a href="manipulation-number/index.html">Comparison : Number</a></li>
+      <li><a href="comparison-number/index.html">Comparison : Number</a></li>
       <li><a href="manipulation-number/index.html">Calculator : Math</a></li>
       <li><a href="manipulation-number/index.html">Calculator : Shape</a></li>
       <li><a href="manipulation-number/index.html">Calculator : Time</a></li>
