--- a/index.html
+++ b/index.html
@@ -11,13 +11,10 @@
     <h1>Learn Java Script</h1>
     <p>Hi everyone ! We're going to learn Java Script from basic !</p>
     <ol>
-      <li>
-        <a href="manipulation-number/index.html">Manipulation : Number</a>
-      </li>
-      <li>
-        <a href="manipulation-string/index.html">Manipulation : String</a>
-      </li>
+      <li><a href="manipulation-number/index.html">Manipulation : Number</a></li>
+      <li><a href="manipulation-string/index.html">Manipulation : String</a></li>
       <li><a href="comparison-number/index.html">Comparison : Number</a></li>
+      <li><a href="learn-js-two/index.html">Learn Java Script Part Two</a></li>
       <li><a href="manipulation-number/index.html">Calculator : Math</a></li>
       <li><a href="manipulation-number/index.html">Calculator : Shape</a></li>
       <li><a href="manipulation-number/index.html">Calculator : Time</a></li>
