Add link to go back to home

--- a/learn-js-two/index.html
+++ b/learn-js-two/index.html
@@ -9,5 +9,7 @@
   </head>
   <body>
     <h1>Hi Everyone!</h1>
+    <p>Let's continue to learn Java Script !</p>
+    <a href="../index.html">Home</a>
   </body>
 </html>
